# nu_plugin_audio_hook

./: CHANGELOG.md  CONTRIB.MD  CONTRIBUTORS.md  Cargo.toml  Justfile  README.md  build.nu  dist-workspace.toml  nupm.nuon
.github/workflows/: codeql.yml  dependency-update.yaml  release-arm64.yml  release.yml  tag-on-merge.yml
src/: audio_meta.rs  audio_player.rs  constants.rs  sound_make.rs  utils.rs
