[package]
name = "nu_plugin_audio"
version = "0.2.3"
edition = "2021"
description = "A nushell plugin to make and play sounds"
homepage = "https://github.com/SuaveIV/nu_plugin_audio"
repository = "https://github.com/SuaveIV/nu_plugin_audio"
readme = "README.md"
license = "MIT"
keywords = [
    "nushell",
    "audio",
    "mp3",
    "player",
    "plugin",
]

[package.metadata]
authors-file = "AUTHORS"

[dependencies]
chrono = "0.4.41"
env_logger = "0.11"
log = "0.4"

[dependencies.crossterm]
version = "0.29"

[dependencies.nu-plugin]
version = "0.111.0"

[dependencies.nu-protocol]
version = "0.111.0"
features = ["plugin"]

[dependencies.rodio]
version = "0.22.1"
default-features = false

[dependencies.unicode-width]
version = "0.2"

[dependencies.lofty]
version = "0.24"

[features]
default = [
    "rodio/playback",
    "rodio/symphonia-all",
    "rodio/dither",
    "rodio/symphonia-simd",
    "rodio/64bit",
    "rodio/recording",
    "rodio/wav_output",
    "rodio/experimental",
]

lite = [
    "rodio/playback",
    "rodio/flac",
    "rodio/vorbis",
    "rodio/wav",
    "rodio/symphonia-mp3",
]

# Retained as an alias for backwards compatibility
all-decoders = ["default"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 2
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
